feat: Add Halal Farcaster Frame infographic

--- a/public/infographic.html
+++ b/public/infographic.html
@@ -12,6 +12,8 @@
     <meta property="fc:frame:image" content="https://your-vercel-url/images/1.png">
     <meta property="fc:frame:post_url" content="https://your-vercel-url/api?page=1">
     <meta property="fc:frame:button:1" content="Start Guide">
+    <meta name="description" content="A comprehensive visual guide to developing Shariah-compliant mini-apps (Frames) on Farcaster. Learn about Halal principles, market opportunities, and compliance evaluation for Muslim developers.">
+    <meta property="og:description" content="Explore Halal innovation on Farcaster with this infographic covering Shariah-compliant app development, market analysis, and Islamic financial principles.">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
